[tool.poetry]
name = "crypto-non-rt-etl-pipeline-dag"
version = "0.1.0"
description = ""
authors = ["eugeneleejunping <eugeneleejunping@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
